# givemail

./: .gitignore  AUTHORS  ChangeLog  Doxyfile.in  Makefile.am  NEWS  README  TODO  aclocal.m4  autogen.sh  config.h.in  configure.in  givemail.spec.in  intltool-merge
conf/: givemail.conf  givemaild.logrotate  mysql_default.sql
docs/: GiveMail WebAPI.odt
po/: POTFILES.in  givemail.pot
sample-api-calls/: create-campaign.xml  create-recipient.xml  delete-campaign.xml  delete-recipient.xml  delete-recipients.xml  get-campaign.xml  get-recipient.xml  import-campaign-recipients.xml  import-recipients.xml  list-campaigns-medium.xml  list-campaigns-min.xml  list-campaigns-name.xml  list-changes.xml  list-recipients.xml  set-campaign-message.xml  set-campaign-status.xml  set-recipient.xml  set-recipients-status.xml
sample-emails/: attachments.xml  givemail.conf  html-only.xml  html-with-images.xml  no-attachment.xml  plain-only.xml  test-email.xml  test-fields.xml  test.xml
scripts/: givemaild
solaris/: Prototype  checkinstall  pkginfo
src/: AuthSQL.cc  AuthSQL.h  Base64.cc  Base64.h  CSVParser.cc  CSVParser.h  Campaign.cc  Campaign.h  CampaignSQL.cc  CampaignSQL.h  ConfigurationFile.cc  ConfigurationFile.h  DBStatusUpdater.cc  DBStatusUpdater.h  DBUsageLogger.cc  DBUsageLogger.h  Daemon.cc  Daemon.h  DomainAuth.cc  DomainAuth.h  DomainKeys.cc  DomainKeys.h  DomainLimits.cc  DomainLimits.h  DomainsMap.cc  DomainsMap.h  HMAC.cc  HMAC.h  Key.cc  Key.h  LibESMTPProvider.cc  LibESMTPProvider.h  LibETPANProvider.cc  LibETPANProvider.h  Makefile.am  MessageDetails.cc  MessageDetails.h  MySQLBase.cc  MySQLBase.h  OpenDKIM.cc  (+48 more)
tests/: dkpublic.key  fields.xml  givemail.conf
